--- a/lerna.json
+++ b/lerna.json
@@ -2,8 +2,5 @@
   "lerna": "2.9.1",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "0.1.2",
-  "packages": [
-    "packages/*"
-  ]
+  "version": "0.2.0"
 }
