--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,3 @@
 {
-  "extends": "airbnb-base",
-  "env": {
-    "jest": true
-  },
-  "rules": {
-    "global-require": 0
-  }
+  "extends": ["eslint-config-standard", "prettier/standard"]
 }
