--- a/package.json
+++ b/package.json
@@ -4,14 +4,7 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "jest --env node --runInBand",
     "lint": "eslint --fix packages/**/*.js"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "projects": [
-      "<rootDir>/packages/*"
-    ]
   },
   "husky": {
     "hooks": {
@@ -19,12 +12,14 @@
     }
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "husky": "^0.14.3",
-    "jest": "^22.4.3",
-    "lerna": "^2.9.1"
+    "eslint": "^5.15.3",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.3.1",
+    "lerna": "^3.13.1"
   }
 }
