--- a/packages/es-modules/package.json
+++ b/packages/es-modules/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@yutahaga/eslint-config-typescript",
+  "name": "@yutahaga/eslint-config-es-modules",
   "version": "1.0.0",
-  "description": "Eslint configuration for TypeScript",
+  "description": "Eslint configuration for es-modules",
   "main": "index.js",
   "publishConfig": {
     "access": "public"
@@ -19,10 +19,5 @@
   "bugs": {
     "url": "https://github.com/yutahaga/eslint-configs/issues"
   },
-  "homepage": "https://github.com/yutahaga/eslint-configs/packages/typescript#readme",
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@typescript-eslint/parser": "^1.5.0",
-    "eslint-config-prettier": "^4.1.0"
-  }
+  "homepage": "https://github.com/yutahaga/eslint-configs/packages/es-modules#readme"
 }
